# libnavmesh

./: .editorconfig  CMakeLists.txt  README.md
sources/: .clang-format  CMakeLists.txt
sources/include/unnatural-navmesh/: navmesh.h
sources/navmesh/: formats.cpp  navmesh.cpp  navmesh.h  optimizations.cpp  optimize.cpp
